# aoc2021

rust_no_std/: Cargo.toml
rust_no_std/examples/: day_1_part_1.rs  day_1_part_2.rs  day_2_part_1.rs  day_2_part_2.rs
rust_no_std/src/: lib.rs
rust_parallel/: Cargo.toml
rust_parallel/examples/: day_1_part_1.rs  day_1_part_2.rs  day_2_part_1.rs  day_2_part_2.rs
