[package]
name = "rust_parallel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
rayon = "1.5.1"
tokio = { version = "1.14.0", features = [ "rt-multi-thread", "macros", "fs", "io-util"] }
tokio-stream = { version = "0.1.8", features = [ "io-util" ] }
